Fix Contrast Errors

--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,13 @@ button {
     background-color: var(--orange);
     border: 3px solid var(--white);
     color: var(--navy);
+    font-weight: bold;   
 }
 
 input {
     background-color: var(--navy);
     color: var(--white);
-    border: 1px solid var(--white)  
+    border: 3px solid var(--white)  
 }
 
 
